@@ -3,15 +3,21 @@ urlpath = /projects/rhythmbox/screenshots
 page_SCRIPTS=
 
 page_DATA = \
-	rb-auto-playlist.png		\
-	rb-auto-playlist-small.png	\
-	rb-ipod.png			\
-	rb-ipod-small.png		\
-	rb-library.png			\
-	rb-library-small.png		\
-	rb-radio.png			\
-	rb-radio-small.png		\
-	rb-minimode.png		\
-	rb-minimode-small.png
+	rb-auto-playlist.png			\
+	rb-auto-playlist-small.png		\
+	rb-radio.png				\
+	rb-radio-small.png			\
+	rhythmbox-ipod.png			\
+	rhythmbox-ipod-small.png		\
+	rhythmbox-jamendo.png			\
+	rhythmbox-jamendo-small.png		\
+	rhythmbox-lastfm.png			\
+	rhythmbox-lastfm-small.png		\
+	rhythmbox-main.png			\
+	rhythmbox-main-small.png		\
+	rhythmbox-minimode.png			\
+	rhythmbox-minimode-small.png		\
+	rhythmbox-visualization.png		\
+	rhythmbox-visualization-small.png	
 
 include $(top_srcdir)/rules.common
