@@ -1,3 +1,7 @@
+2007-04-05  James Livingston  <doclivingston@gmail.com>
+
+	* screenshots/Makefile.am: fix the build. oops
+
 2007-04-04  James Livingston  <doclivingston@gmail.com>
 
 	* screenshots.xml: updated screenshots, thanks to Paul Williams
